margin overlap fixed to make it more responsive for phones

--- a/recipes/lasagna.css
+++ b/recipes/lasagna.css
@@ -23,12 +23,12 @@ main {
   display: flex;
   flex-direction: column;
   font-size: 1.5vw;
-  min-height: 80%;
-  padding-block-start: 15vw;
-  margin-block-end: 11vw;
-  margin-inline-start: 5vw;
-  margin-inline-end: 5vw;
-  padding-left: 0vw;
+  width: 100%;
+  height: 77%;
+  margin: 0;
+  padding: 1%;
+  padding-top: 20%;
+  padding-bottom: 30%;
 }
 
 header {
@@ -77,13 +77,9 @@ ol {
   padding: 20px;
 }
 
-.container {
-  margin-bottom: 10%;
-}
-
 .Ingredients {
   margin-bottom: 5vw;
-  padding: 5%;
+  padding: 2vw;
   border-color: #b78100;
   border-style: dashed;
   border-width: 0.2vw;
@@ -91,7 +87,7 @@ ol {
 }
 
 .Instructions {
-  padding-top: 5%;
+  padding: 2vw;
   text-indent: 5%;
   margin-bottom: 5vw;
   padding: -1%;
@@ -105,16 +101,10 @@ ol {
   margin-bottom: 0%;
 }
 
-.Instructions h3 {}
-
-.Instructions ol {
-  padding-top: 0%;
-}
-
 .Nutritions {
   display: inline-block;
   margin-bottom: 5vw;
-  padding: 5%;
+  padding: 2vw;
   border-color: #b78100;
   border-style: dashed;
   border-width: 0.2vw;
@@ -122,7 +112,6 @@ ol {
 }
 
 .Nutritions-list {
-  margin: 0;
   columns: 2;
 }
 
